...
                                                        <rect key="frame" x="0.0" y="0.0" width="177" height="41"/>
                                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                                        <state key="normal" title="User">
                                                            <color key="titleColor" systemColor="systemRedColor"/>
                                                        </state>
...
                                                <rect key="frame" x="0.0" y="57.333333333333329" width="374" height="106.99999999999999"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" verticalHuggingPriority="750" text="Current Temperature" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstra
                                                        <rect key="frame" x="80.333333333333329" y="0.0" width="213.33333333333337" height="28.666666666666668"/>
                                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                <rect key="frame" x="0.0" y="164.33333333333337" width="374" height="151.66666666666663"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" text="Heating Level" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor=
                                                        <rect key="frame" x="116.66666666666667" y="0.0" width="140.66666666666663" height="28.666666666666668"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
...
                                                <rect key="frame" x="0.0" y="0.0" width="374" height="131.33333333333334"/>
                                                <subviews>
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" text="Steps today" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0
                                                        <rect key="frame" x="0.0" y="0.0" width="374" height="28.666666666666668"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
...
                                                </subviews>
                                            </stackView>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Work safely" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N6Z-nZ-851" userLabel="WorkSafelyLabel">
                                                <rect key="frame" x="0.0" y="131.33333333333337" width="374" height="28.666666666666657"/>
                                                <constraints>
...
                                        <rect key="frame" x="138" y="162.66666666666669" width="38" height="41"/>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                        <state key="normal" title="Set">
                                            <color key="titleColor" systemColor="systemRedColor"/>
                                        </state>
...
