...
var heatingCharacteristic: CBCharacteristic!
var receivedHeatingLevel = HeatingLevel.None
var sliderUpdateCount = 0
let kImpossibleTemperatureToAchieve = -999999

enum HeatingLevel {
    case None
    case Percent33
    case Percent66
    case Full
}

struct HeatingData {
...
